
[package]
authors = ["dxw <d@x.w>"]
edition = "2021"
name    = "pmtaro-export-plugin"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.0"
dicom = "0.9.0"
dicom-pixeldata = { version = "0.9.0", features = ["image"] }
image = "0.25.9"
leptess = "0.14.0"
leptonica-sys = "0.4.9"
napi        = { version = "3.0.0", features = ["napi9"] }
napi-derive = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
